--- a/Stocks.ipynb
+++ b/Stocks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,21 +24,14 @@
      ]
     },
     {
-     "ename": "ImportError",
-     "evalue": "Failed to initialize: Bad git executable.\nThe git executable must be specified in one of the following ways:\n    - be included in your $PATH\n    - be set via $GIT_PYTHON_GIT_EXECUTABLE\n    - explicitly set via git.refresh(<full-path-to-git-executable>)\n\nAll git commands will error until this is rectified.\n\nThis initial message can be silenced or aggravated in the future by setting the\n$GIT_PYTHON_REFRESH environment variable. Use one of the following values:\n    - quiet|q|silence|s|silent|none|n|0: for no message or exception\n    - warn|w|warning|log|l|1: for a warning message (logging level CRITICAL, displayed by default)\n    - error|e|exception|raise|r|2: for a raised exception\n\nExample:\n    export GIT_PYTHON_REFRESH=quiet\n",
+     "ename": "AttributeError",
+     "evalue": "module 'datetime' has no attribute 'now'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\Jan.Aamnes\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\git\\__init__.py:296\u001b[0m\n\u001b[0;32m    295\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 296\u001b[0m     \u001b[43mrefresh\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    297\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m _exc:\n",
-      "File \u001b[1;32mc:\\Users\\Jan.Aamnes\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\git\\__init__.py:287\u001b[0m, in \u001b[0;36mrefresh\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    285\u001b[0m GIT_OK \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m--> 287\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mGit\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrefresh\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m    288\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Jan.Aamnes\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\git\\cmd.py:631\u001b[0m, in \u001b[0;36mGit.refresh\u001b[1;34m(cls, path)\u001b[0m\n\u001b[0;32m    630\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 631\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(err)\n\u001b[0;32m    632\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mImportError\u001b[0m: Bad git executable.\nThe git executable must be specified in one of the following ways:\n    - be included in your $PATH\n    - be set via $GIT_PYTHON_GIT_EXECUTABLE\n    - explicitly set via git.refresh(<full-path-to-git-executable>)\n\nAll git commands will error until this is rectified.\n\nThis initial message can be silenced or aggravated in the future by setting the\n$GIT_PYTHON_REFRESH environment variable. Use one of the following values:\n    - quiet|q|silence|s|silent|none|n|0: for no message or exception\n    - warn|w|warning|log|l|1: for a warning message (logging level CRITICAL, displayed by default)\n    - error|e|exception|raise|r|2: for a raised exception\n\nExample:\n    export GIT_PYTHON_REFRESH=quiet\n",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[76], line 308\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mJan.Aamnes\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mDropbox\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mindex.html\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m    306\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(html_content)\n\u001b[1;32m--> 308\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgit\u001b[39;00m\n\u001b[0;32m    309\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BytesIO\n\u001b[0;32m    310\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime\n",
-      "File \u001b[1;32mc:\\Users\\Jan.Aamnes\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\git\\__init__.py:298\u001b[0m\n\u001b[0;32m    296\u001b[0m     refresh()\n\u001b[0;32m    297\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m _exc:\n\u001b[1;32m--> 298\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to initialize: \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(_exc)) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m_exc\u001b[39;00m\n\u001b[0;32m    300\u001b[0m \u001b[38;5;66;03m# } END initialize git executable path\u001b[39;00m\n",
-      "\u001b[1;31mImportError\u001b[0m: Failed to initialize: Bad git executable.\nThe git executable must be specified in one of the following ways:\n    - be included in your $PATH\n    - be set via $GIT_PYTHON_GIT_EXECUTABLE\n    - explicitly set via git.refresh(<full-path-to-git-executable>)\n\nAll git commands will error until this is rectified.\n\nThis initial message can be silenced or aggravated in the future by setting the\n$GIT_PYTHON_REFRESH environment variable. Use one of the following values:\n    - quiet|q|silence|s|silent|none|n|0: for no message or exception\n    - warn|w|warning|log|l|1: for a warning message (logging level CRITICAL, displayed by default)\n    - error|e|exception|raise|r|2: for a raised exception\n\nExample:\n    export GIT_PYTHON_REFRESH=quiet\n"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 110\u001b[0m\n\u001b[0;32m    107\u001b[0m html_table \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mto_html(escape\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    109\u001b[0m \u001b[38;5;66;03m# Get current date and time\u001b[39;00m\n\u001b[1;32m--> 110\u001b[0m now \u001b[38;5;241m=\u001b[39m \u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnow\u001b[49m()\n\u001b[0;32m    112\u001b[0m \u001b[38;5;66;03m# Format as a string\u001b[39;00m\n\u001b[0;32m    113\u001b[0m formatted_datetime \u001b[38;5;241m=\u001b[39m now\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'datetime' has no attribute 'now'"
      ]
     }
    ],
@@ -151,6 +144,12 @@
     "df[\"Return[%]\"] = df[\"Return[%]\"].astype(str) + \"%\"\n",
     "html_table = df.to_html(escape=False, index=False)\n",
     "\n",
+    "# Get current date and time\n",
+    "now = datetime.now()\n",
+    "\n",
+    "# Format as a string\n",
+    "formatted_datetime = now.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
     "# Combine the Plotly figure and the table into one HTML page\n",
     "html_content = f\"\"\"\n",
     "<html>\n",
@@ -242,6 +241,7 @@
     "</head>\n",
     "<body>\n",
     "    <h1>Q4 Stocks Index</h1>\n",
+    "    <p>{formatted_datetime}</p>\n",
     "    <div class=\"quote-container\">\n",
     "        <div id=\"quoteText\">\n",
     "            <!-- Quotes will be inserted here -->\n",
@@ -347,40 +347,8 @@
     "\n",
     "#display(HTML(html_content))\n",
     "\n",
-    "with open(\"C:\\\\Users\\\\Jan.Aamnes\\\\Dropbox\\\\index.html\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(html_content)\n",
-    "\n",
-    "import git\n",
-    "from io import BytesIO\n",
-    "from datetime import datetime\n",
-    "\n",
-    "# Configuration\n",
-    "GITHUB_REPO = \"https://github.com/jcaamnes/Stocks.git\"\n",
-    "LOCAL_DIR = \"local_repo\"\n",
-    "FILE_TO_UPDATE = \"index.html\"\n",
-    "COMMIT_MESSAGE = \"Automated update via Python script\"\n",
-    "\n",
-    "# Clone or pull the repository\n",
-    "if not os.path.exists(LOCAL_DIR):\n",
-    "    print(\"Cloning repository...\")\n",
-    "    repo = git.Repo.clone_from(GITHUB_REPO, LOCAL_DIR)\n",
-    "else:\n",
-    "    print(\"Pulling latest changes...\")\n",
-    "    repo = git.Repo(LOCAL_DIR)\n",
-    "    repo.git.pull()\n",
-    "\n",
-    "# Add the content to the Git index directly\n",
-    "repo.index.add([FILE_TO_UPDATE])  # Ensure the file is in the index\n",
-    "blob = repo.head.commit.tree / FILE_TO_UPDATE  # Locate the file in the tree\n",
-    "\n",
-    "# Update the blob directly with the new content\n",
-    "new_blob = repo.index.write_blob(BytesIO(html_content.encode()), FILE_TO_UPDATE)\n",
-    "repo.index.commit(COMMIT_MESSAGE)\n",
-    "\n",
-    "# Push changes\n",
-    "origin = repo.remote(name=\"origin\")\n",
-    "origin.push()\n",
-    "print(\"Changes pushed to GitHub!\")\n"
+    "with open(\"C:\\\\Users\\\\Jan.Aamnes\\\\OneDrive - insidemedia.net\\\\Documents\\\\Python\\\\Stocks\\\\index.html\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(html_content)"
    ]
   },
   {
@@ -388,10 +356,7 @@
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open(\"investor_page.html\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(html_content)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
