--- a/Stocks.ipynb
+++ b/Stocks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -22,24 +22,13 @@
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'datetime' has no attribute 'now'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 110\u001b[0m\n\u001b[0;32m    107\u001b[0m html_table \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mto_html(escape\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    109\u001b[0m \u001b[38;5;66;03m# Get current date and time\u001b[39;00m\n\u001b[1;32m--> 110\u001b[0m now \u001b[38;5;241m=\u001b[39m \u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnow\u001b[49m()\n\u001b[0;32m    112\u001b[0m \u001b[38;5;66;03m# Format as a string\u001b[39;00m\n\u001b[0;32m    113\u001b[0m formatted_datetime \u001b[38;5;241m=\u001b[39m now\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'datetime' has no attribute 'now'"
-     ]
     }
    ],
    "source": [
     "from ctypes import sizeof\n",
     "import yfinance as yf\n",
     "import pandas as pd\n",
-    "import datetime\n",
+    "from datetime import datetime as dt\n",
     "from IPython.display import display, HTML\n",
     "import plotly.graph_objects as go\n",
     "\n",
@@ -145,7 +134,7 @@
     "html_table = df.to_html(escape=False, index=False)\n",
     "\n",
     "# Get current date and time\n",
-    "now = datetime.now()\n",
+    "now = dt.now()\n",
     "\n",
     "# Format as a string\n",
     "formatted_datetime = now.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
